--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -31,12 +31,12 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker build -t docker.io/kilala/kilalaCMS:${{ github.sha }} .
+          docker build -t docker.io/kilala/kilalacms:${{ github.sha }} .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
-          image-ref: 'docker.io/kilala/kilalaCMS:${{ github.sha }}'
+          image-ref: 'docker.io/kilala/kilalacms:${{ github.sha }}'
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
