--- a/.github/workflows/slim-skeleton-tests.yml
+++ b/.github/workflows/slim-skeleton-tests.yml
@@ -7,6 +7,9 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "test" ]
 
+permissions:
+  contents: read
+  
 jobs:
     tests:
         name: Tests PHP ${{ matrix.php }}
