Little Docker security and settings.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     slim:
         image: php:8-alpine
         working_dir: /var/www
-        command: php -S 0.0.0.0:8080 -t public
+        command: php -S 0.0.0.0:8080 -t api
         environment:
             docker: "true"
         ports:
@@ -16,3 +16,5 @@ services:
         volumes:
             - .:/var/www
             - logs:/var/www/logs
+        security_opt:
+            - no-new-privileges:true
